[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/PopUp/About/About.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[node name="About" type="WindowDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.5
margin_top = -112.5
margin_right = 133.5
margin_bottom = 112.5
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 1 )
popup_exclusive = true
window_title = "About Geo2D"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="LabelDescriptions" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Descrição: Geo2D é um programa para criar e manipular figuras planas regulares e irregulares. 

Versão: Geo2D 1.0

Desenvolvedores: Diegão, Rondônia e Luixxz"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelGithub" type="Label" parent="LabelDescriptions"]
margin_top = 157.0
margin_right = 188.0
margin_bottom = 175.0
text = "Github:"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="LabelDescriptions/LabelGithub"]
margin_left = 50.0
margin_right = 190.0
margin_bottom = 18.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkLuis" type="LinkButton" parent="LabelDescriptions/LabelGithub/HBoxContainer"]
margin_right = 26.0
margin_bottom = 18.0
action_mode = 0
text = "Luis"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkDiego" type="LinkButton" parent="LabelDescriptions/LabelGithub/HBoxContainer"]
margin_left = 30.0
margin_right = 67.0
margin_bottom = 18.0
action_mode = 0
text = "Diego"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkEberson" type="LinkButton" parent="LabelDescriptions/LabelGithub/HBoxContainer"]
margin_left = 71.0
margin_right = 122.0
margin_bottom = 18.0
action_mode = 0
text = "Eberson"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="LabelDescriptions/LabelGithub/HBoxContainer/LinkLuis" to="." method="_on_LinkButton_pressed"]
[connection signal="pressed" from="LabelDescriptions/LabelGithub/HBoxContainer/LinkLuis" to="." method="_on_LinkLuis_pressed"]
[connection signal="pressed" from="LabelDescriptions/LabelGithub/HBoxContainer/LinkDiego" to="." method="_on_LinkDiego_pressed"]
[connection signal="pressed" from="LabelDescriptions/LabelGithub/HBoxContainer/LinkEberson" to="." method="_on_LinkButton3_pressed"]
[connection signal="pressed" from="LabelDescriptions/LabelGithub/HBoxContainer/LinkEberson" to="." method="_on_LinkEberson_pressed"]
